fixed collab avatar spacing

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -26,7 +26,7 @@
   width: 65px;
   height: 65px;
   border-radius: 50%;
-  margin-top: 10px;
+  margin: 10px;
   object-fit: cover;
 }
 
